--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.33",
     "@material-ui/pickers": "^3.2.10",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.10.0",
     "emailjs-com": "^2.4.1",
