--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ml-app",
   "version": "0.1.0",
+  "homepage": "https://mobilland.no",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.33",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
