--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.10.0",
     "react": "^16.11.0",
+    "react-date-range": "^1.1.3",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
